--- a/views/sistema/hoteles.phtml
+++ b/views/sistema/hoteles.phtml
@@ -221,7 +221,7 @@ $('#btnHoteles').on('click',function()
     if($('#cmbCiudadDestino_H').val()==0 && $('#txtNombre_H').val()=='' && $('#cmbCategoria_H').val()==0)
     {
         $('#divAlertWarHot').fadeIn( 1500 );
-        $('#divAlertWarHoy').animate({
+        $('#divAlertWarHot').animate({
                 'display': 'block'
         });
         
