Se deja en stand-by el proceso de generar voucher y anular reserva

--- a/views/sistema/consultarBooking.phtml
+++ b/views/sistema/consultarBooking.phtml
@@ -212,7 +212,7 @@ $(function()
                                                         
                                                         if($cR_voucher=='S')
                                                         {
-                                                            $voucherStatus='<a href="' . BASE_URL . 'sistema/verPDF/'.$cR_booking.'" target="_blank">
+                                                            $voucherStatus='<a href="' . BASE_URL . 'sistema/generaVoucherPdf/'.$cR_booking.'" target="_blank">
                                                             <img src="'.$_layoutParams['ruta_img'].'pdf.png" alt="edit" width="24" border="0" />
                                                             </a>';
                                                         }
